--- a/fixme.dtx
+++ b/fixme.dtx
@@ -365,18 +365,6 @@
 % \DescribeMacro{\listfixmename}
 % \cs{listfixmename} defines the title for the ``list of fixmes'' section.
 %
-% ^^A\subsection{Counters}
-% ^^A \DescribeMacro{\thefixmecount}
-% ^^A \DescribeMacro{\thefixmenotecount}
-% ^^A \DescribeMacro{\thefixmewarningcount}
-% ^^A \DescribeMacro{\thefixmeerrorcount}
-% ^^A \DescribeMacro{\thefixmefatalcount}
-% ^^A As of \fixme version 2.0, four counters are provided. They count
-% ^^A respectively the total number of \fixme notes, and the number of
-% ^^A level-specific ones. At the end of processing, a \fixme usage summary
-% ^^A is displayed and logged.
-%
-%
 % \section{\auctex support}
 % \auctex is a powerful major mode for editing \TeX{} documents in
 % \textsf{Emacs} or \textsf{XEmacs}. In particular, it provides automatic
@@ -387,13 +375,15 @@
 % \LaTeX{} styles directory). Please refer to the \auctex documentation for
 % more information on this.
 %
-% \section{Changes}
+% \section{History}
 % \begin{itemize}
-% \item[v4.0] Support for key/value argument syntax in user interface.\\
-%   New command \cs{fxsetup}.\\
-%   New layout option \texttt{innerfallback}, to automatically avoid the
-%   \texttt{margin} and \texttt{marginclue} layouts when not in outer par
-%   mode, suggested by Will Robertson.\\
+% \item[v4.0] New feature: floating notes (not specific to any portion of
+%   text), suggested by Rasmus Villemoes.\\
+%   New feature: automatically avoid the \texttt{margin} and
+%   \texttt{marginclue} layouts when not in outer par mode, suggested by Will
+%   Robertson.\\
+%   New feature: key/value argument syntax in the whole user interface.\\
+%   New command: \cs{fxsetup}.\\
 %   Homogenize the log and console messages.\\
 %   Heavy internals refactoring.
 % \item[v3.4] \cs{fixme}, \cs{fxerror}, \cs{fxwarning} and \cs{fxnote} are now
